Added memsql_user and memsql_group params. Update init.pp with rc script template file

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .vagrant/*
 *.box
-packer/output-virtualbox-iso/*
-packer/packer_cache/*
+packer/output-virtualbox-iso
+packer/packer_cache
+packer/puppet/var
 tmp/*
